@@ -1,6 +1,8 @@
 Version 5.9.4
+- Added some error checking for parameters of CPU/coginit/cognew
 - Fixed Spin2 round(), trunc(), and float() operators for variable expressions
 - Fixed multiply by -1 when local variables are on the stack
+- Various improvements to the nu code backend
 
 Version 5.9.3
 - Fixed automatic detection of floats for printf/scanf
